--- a/WebQuanAo_Demo/WebQuanAo_Demo.csproj
+++ b/WebQuanAo_Demo/WebQuanAo_Demo.csproj
@@ -62,44 +62,38 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form2.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
-    </Compile>
     <Compile Include="FormBanHang.cs">
-      <SubType>Form</SubType>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="FormBanHang.Designer.cs">
       <DependentUpon>FormBanHang.cs</DependentUpon>
     </Compile>
     <Compile Include="FormCapNhatNhomSP.cs">
-      <SubType>Form</SubType>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="FormCapNhatNhomSP.Designer.cs">
       <DependentUpon>FormCapNhatNhomSP.cs</DependentUpon>
     </Compile>
     <Compile Include="FormChinhSuaQuanAo.cs">
-      <SubType>Form</SubType>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="FormChinhSuaQuanAo.Designer.cs">
       <DependentUpon>FormChinhSuaQuanAo.cs</DependentUpon>
     </Compile>
     <Compile Include="FormChonSanPham.cs">
-      <SubType>Form</SubType>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="FormChonSanPham.Designer.cs">
       <DependentUpon>FormChonSanPham.cs</DependentUpon>
     </Compile>
     <Compile Include="FormLogin.cs">
-      <SubType>Form</SubType>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="FormLogin.Designer.cs">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </Compile>
     <Compile Include="FormThemLoai.cs">
-      <SubType>Form</SubType>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="FormThemLoai.Designer.cs">
       <DependentUpon>FormThemLoai.cs</DependentUpon>
@@ -111,24 +105,28 @@
       <DependentUpon>FormThemSanPham.cs</DependentUpon>
     </Compile>
     <Compile Include="FormXemNguoiDung.cs">
-      <SubType>Form</SubType>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="FormXemNguoiDung.Designer.cs">
       <DependentUpon>FormXemNguoiDung.cs</DependentUpon>
     </Compile>
     <Compile Include="FormXemQuanAo.cs">
-      <SubType>Form</SubType>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="FormXemQuanAo.Designer.cs">
       <DependentUpon>FormXemQuanAo.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringValidator.cs" />
+    <Compile Include="UserControl1.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControl1.Designer.cs">
+      <DependentUpon>UserControl1.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormBanHang.resx">
       <DependentUpon>FormBanHang.cs</DependentUpon>
