Đồng bộ font chữ 👻🙈🙉

--- a/WebQuanAo_Demo/App.config
+++ b/WebQuanAo_Demo/App.config
@@ -38,7 +38,7 @@
         <value></value>
       </setting>
       <setting name="DefaultAppFont" serializeAs="String">
-        <value></value>
+        <value>Segoe UI;9.75</value>
       </setting>
       <setting name="CustomPaletteCollection" serializeAs="Xml">
         <value />
