--- a/WebQuanAo_Demo/WebQuanAo_Demo.csproj
+++ b/WebQuanAo_Demo/WebQuanAo_Demo.csproj
@@ -81,7 +81,7 @@
       <DependentUpon>FormChinhSuaQuanAo.cs</DependentUpon>
     </Compile>
     <Compile Include="FormChonSanPham.cs">
-      <SubType>UserControl</SubType>
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormChonSanPham.Designer.cs">
       <DependentUpon>FormChonSanPham.cs</DependentUpon>
@@ -98,11 +98,11 @@
     <Compile Include="FormThemLoai.Designer.cs">
       <DependentUpon>FormThemLoai.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormThemSanPham.cs">
-      <SubType>Form</SubType>
+    <Compile Include="FormThemSP.cs">
+      <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="FormThemSanPham.Designer.cs">
-      <DependentUpon>FormThemSanPham.cs</DependentUpon>
+    <Compile Include="FormThemSP.Designer.cs">
+      <DependentUpon>FormThemSP.cs</DependentUpon>
     </Compile>
     <Compile Include="FormXemNguoiDung.cs">
       <SubType>UserControl</SubType>
@@ -110,11 +110,11 @@
     <Compile Include="FormXemNguoiDung.Designer.cs">
       <DependentUpon>FormXemNguoiDung.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormXemQuanAo.cs">
+    <Compile Include="FormXemSP.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="FormXemQuanAo.Designer.cs">
-      <DependentUpon>FormXemQuanAo.cs</DependentUpon>
+    <Compile Include="FormXemSP.Designer.cs">
+      <DependentUpon>FormXemSP.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -140,14 +140,14 @@
     <EmbeddedResource Include="FormThemLoai.resx">
       <DependentUpon>FormThemLoai.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormThemSanPham.resx">
-      <DependentUpon>FormThemSanPham.cs</DependentUpon>
+    <EmbeddedResource Include="FormThemSP.resx">
+      <DependentUpon>FormThemSP.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormXemNguoiDung.resx">
       <DependentUpon>FormXemNguoiDung.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormXemQuanAo.resx">
-      <DependentUpon>FormXemQuanAo.cs</DependentUpon>
+    <EmbeddedResource Include="FormXemSP.resx">
+      <DependentUpon>FormXemSP.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
