--- a/src/QuanLyShopQuanAo/QuanLyShopQuanAo/QuanLyShopQuanAo.csproj
+++ b/src/QuanLyShopQuanAo/QuanLyShopQuanAo/QuanLyShopQuanAo.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commons\TienIch.cs" />
     <Compile Include="FormAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
