--- a/src/QuanLyShopQuanAo/QuanLyShopQuanAo/QuanLyShopQuanAo.csproj
+++ b/src/QuanLyShopQuanAo/QuanLyShopQuanAo/QuanLyShopQuanAo.csproj
@@ -46,7 +46,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commons\StringValidator.cs" />
     <Compile Include="Commons\TienIch.cs" />
+    <Compile Include="DAO\BanHang_DAO.cs" />
+    <Compile Include="DAO\ChiTietBanHang_DAO.cs" />
+    <Compile Include="DAO\DataProvider.cs" />
+    <Compile Include="DAO\HinhQA_DAO.cs" />
+    <Compile Include="DAO\KhachHang_DAO.cs" />
+    <Compile Include="DAO\LoaiQA_DAO.cs" />
+    <Compile Include="DAO\QuanAo_DAO.cs" />
+    <Compile Include="DAO\QuanTriVien_DAO.cs" />
+    <Compile Include="DTO\BanHang_DTO.cs" />
+    <Compile Include="DTO\ChiTietBanHang_DTO.cs" />
+    <Compile Include="DTO\KhachHang_DTO.cs" />
+    <Compile Include="DTO\LoaiQA_DTO.cs" />
+    <Compile Include="DTO\QuanAo_DTO.cs" />
+    <Compile Include="DTO\QuanTriVien_DTO.cs" />
     <Compile Include="FormAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
