--- a/src/QuanLyShopQuanAo/QuanLyShopQuanAo/QuanLyShopQuanAo.csproj
+++ b/src/QuanLyShopQuanAo/QuanLyShopQuanAo/QuanLyShopQuanAo.csproj
@@ -57,12 +57,14 @@
     <Compile Include="DAO\LoaiQA_DAO.cs" />
     <Compile Include="DAO\QuanAo_DAO.cs" />
     <Compile Include="DAO\QuanTriVien_DAO.cs" />
+    <Compile Include="DAO\ThongKeBanHang_DAO.cs" />
     <Compile Include="DTO\BanHang_DTO.cs" />
     <Compile Include="DTO\ChiTietBanHang_DTO.cs" />
     <Compile Include="DTO\KhachHang_DTO.cs" />
     <Compile Include="DTO\LoaiQA_DTO.cs" />
     <Compile Include="DTO\QuanAo_DTO.cs" />
     <Compile Include="DTO\QuanTriVien_DTO.cs" />
+    <Compile Include="DTO\ThongKeBanHang_DTO.cs" />
     <Compile Include="FormAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
