--- a/src/QuanLyShopQuanAo/QuanLyShopQuanAo/QuanLyShopQuanAo.csproj
+++ b/src/QuanLyShopQuanAo/QuanLyShopQuanAo/QuanLyShopQuanAo.csproj
@@ -60,6 +60,7 @@
     <Compile Include="DAO\ThongKeBanHang_DAO.cs" />
     <Compile Include="DTO\BanHang_DTO.cs" />
     <Compile Include="DTO\ChiTietBanHang_DTO.cs" />
+    <Compile Include="DTO\HinhQA_DTO.cs" />
     <Compile Include="DTO\KhachHang_DTO.cs" />
     <Compile Include="DTO\LoaiQA_DTO.cs" />
     <Compile Include="DTO\QuanAo_DTO.cs" />
