--- a/src/QuanLyShopQuanAo/QuanLyShopQuanAo/QuanLyShopQuanAo.csproj
+++ b/src/QuanLyShopQuanAo/QuanLyShopQuanAo/QuanLyShopQuanAo.csproj
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commons\ExtensionMethods.cs" />
-    <Compile Include="Commons\StringValidator.cs" />
+    <Compile Include="Commons\InputValidator.cs" />
     <Compile Include="Commons\TienIch.cs" />
     <Compile Include="DAO\BanHang_DAO.cs" />
     <Compile Include="DAO\ChiTietBanHang_DAO.cs" />
